# bitsandbytes

./: .clang-format  .editorconfig  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .style.yapf  APPLE_SILICON_IMPLEMENTATION.md  BUCK  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakelists.txt  COMPILE_H100_L40.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  KBIT_PROGRESS.md  LICENSE  MANIFEST.in  MPS_TESTING_REPORT.md  Makefile  Makefile.previous  NOTICE.md  PATCH_NOTES.md  PROGRESS.md  PULL_REQUEST_TEMPLATE.md  QLORA_GUIDE.md  README.md  SECURITY.md  Windows_Comile_Howto.txt  Windows_Compile_Howto.bat  __init__.py  _typos.toml  ast_test.py  bench_debug.py  bench_moe_pipeline.py  benchmarking-report.md  bitsandbytes2_overview.md  buildall.ps1  check_bnb_install.py  compile_from_source.md  (+59 more)
.github/: FUNDING.yml  dependabot.yml  dependabot.yml.disabled
0000-bnb_mps_capture.gputrace.gputrace/: 3539D4511E231433  MTLHeap-357-0  capture  device-resources-0x10c055800  index  metadata  startup-0-platform  store0  unsorted-capture  unused-device-resources-0x10c055800
0000-bnb_mps_capture_1.gputrace.gputrace/: 5D6E6EC7F0E18154  CF1F8E4F22B4F665  capture  delta-device-resources-0x11e843e00  device-resources-0x11e843e00  index  metadata  startup-0-platform  store0  unsorted-capture  unused-device-resources-0x11e843e00
agents/: api_surface.md  architecture_guide.md  code_standards.md  coordinator_guide.md  dispatch_guide.md  downstream_integrations.md  fetch_issues.py  flute_kernel_guide.md  github_tools_guide.md  issue_maintenance_guide.md  issue_patterns.md  issue_triage_workflow.md  kbit_gemm_context.md  linting_guide.md  pr_review_guide.md  query_issues.py  scalar_gemv_guide.md  security_guide.md  testing_guide.md  worktree_guide.md
benchmarking/: README.md  generation_benchmark.py  inference_benchmark.py  matmul_benchmark.py  optimizer_benchmark.py  optimizer_benchmark_comprehensive.py  small_ref.py
benchmarks/: bench_absmax_format.py  bench_crossover.py  bench_cuda_events.py  bench_dequant.py  bench_dequant.sh  bench_fp16.py  bench_fp16_moe_sweep.py  bench_gemv_analysis.py  bench_gemv_theoretical.py  bench_grouped_gemm.py  bench_hadamard.py  bench_hw_gemm.py  bench_kbit_gemm.py  bench_kbit_vlm.py  bench_moe_e2e.py  bench_moe_gemm_sm100.py  bench_ncu.sh  bench_scalar_gemv.py  bench_tiled_vs_flat.py  bench_vq_codebook.py  bench_vq_grouped_gemm.py  bench_vq_ncu.sh  model_summary.py  ncu_driver.py  ncu_moe_sweep.py  ncu_single_moe.py  ncu_vq_driver.py  nvfp4_gemm_results.md  nvfp4_moe_pipeline_results.md
bitsandbytes/: __init__.py  __main__.py  _ops.py  _pbf4.py  _pbf8.py  _telemetry.py  arch_config.py  archive_functional.py  attention.py  backends.py  cextension.py  checkpoint.py  chunked.py  consts.py  cuda_setup.py  cuda_specs.py  debug_cli.py  fsdp.py  functional.py  kbit_lora.py  libbitsandbytes_cpu.dylib  moe.py  mps_specs.py  npu_specs.py  ops.py  pipeline.py  test_bnb_mac.py  training.py  utils.py
bitsandbytes_tests/: conftest.py  test_autograd.py  test_deprecated.py  test_generation.py  test_linear4bit.py  test_ops.py
cmake/: XPU.cmake  XPUBuildFlags.cmake
cpp_source/: pythonInterface.c
csrc/: CMakeLists.txt  common.cpp  common.cuh  common.h  common_hip.cuh  compat.cuh  compat_device.cuh  config.h.in  cpu_ops.cpp  cpu_ops.h  gemm_4bit.cu  gemm_4bit_common.cuh  gemm_4bit_mma.cuh  gemm_4bit_simt.cu  gemm_4bit_simt.cuh  gemm_4bit_sm75.cu  gemm_4bit_sm75.cuh  gemm_4bit_sm80.cu  gemm_4bit_sm80.cuh  getopt.c  getopt.h  kernels.cu  kernels.cuh  kernels.dp.cpp  kernels.dp.hpp  kernels.hip  kernels.hiph  kernels_hip.cuh  kernels_nvfp4_moe_sm120.cu  kernels_nvfp4_sm120.cu  mps_kernels.metal  mps_ops.h  mps_ops.mm  npu_kernels.cpp  npu_ops.cpp  npu_ops.h  ops.cu  ops.cuh  ops.dp.hpp  ops.hip  (+11 more)
csrc/cuda/: blockwise_quantization.cu  blockwise_quantization.cuh  int8.cu  int8.cuh  optimizers.cu  optimizers.cuh
csrc/examples/: CMakeLists_changes.md  CMakeLists_unified.txt  common_unified.cuh  compat_device.cuh  kernels_unified.cu  ops_unified.cu  ops_unified.cuh  pythonInterface_unified.cpp
csrc/qutlass/: fused_quantize_nv.cu  gemm_nvfp4_grouped_sm100.cu  gemm_nvfp4_moe_sm100.cu  gemm_nvfp4_moe_sm120.cu  gemm_nvfp4_sm100.cu  gemm_nvfp4_sm120.cu  moe_scatter_gather.cu  scale_reorder.cu
csrc/qutlass/include/: gemm_nvfp4_sm100_types.h  gemm_nvfp4_sm120_types.h
csrc/qutlass/include/cutlass_extensions/epilogue/thread/: linear_combination_quant.h
csrc/qutlass/include/cutlass_extensions/epilogue/threadblock/: default_epilogue_tensor_op_quant.h  epilogue_quant.h
csrc/qutlass/include/cutlass_extensions/gemm/device/: gemm_quant.h
csrc/qutlass/include/cutlass_extensions/gemm/kernel/: default_gemm_quant.h  gemm_quant.h
csrc/sycl/: kernels.cpp  kernels.h  ops.cpp  ops.h  utilities.h
cuda_source/: basicOps.cu  clusterKernels.cu
docker/: Dockerfile.cpu  Dockerfile.xpu  cuda.Dockerfile
docs/: nvfp4_implementation_guide.md
examples/: compile_debug.py  compile_inference.py  compile_inference.py.tmp  compile_pirate_qlora.py  compile_qlora.py.tmp  experts4bit_qlora_demo.py  int8_inference_huggingface.py  int8_inference_huggingface_cpu.py  train_pipeline.py  train_qlora.py
include/: AAlloc.h  Algo-Direct-Common.h  Algo-Direct2.h  AlgoXCodes.h  BinAlgo.h  BinSearch.h  Portable.h  SIMD.h  Type.h  basicOps.cuh  clusterKernels.cuh  sse2neon.h
results/: vq_bench_generalized.json
scripts/: auditwheel_show.py  get_docker_info.py  get_docker_info.sh  integration_test_report.py  mps_nf4_test.py  qlora_mem_estimation.py  set_platform_tag.py  stale.py  train_qwen3_30b.py  validate_gds.py  verify_telemetry.py
speed_benchmark/: README.md  make_plot_with_jsonl.py  speed_benchmark.py
tests/: bench_experts4bit.py  conftest.py  fsdp_state_dict_save.py  helpers.py  models.py  test_arch_config.py  test_autograd.py  test_checkpoint.py  test_chunked_attention.py  test_chunked_ce.py  test_chunked_mlp.py  test_conv.py  test_cuda_setup_evaluator.py  test_cuda_specs.py  test_deprecated.py  test_diagnostics_main.py  test_distributed_pipeline.py  (+40 more)
tests/sycl/: CMakeLists.txt  main.cpp
(+227 files in other folders)
